k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-deployment
  namespace: microservices-qa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multi
  template:
    metadata:
      labels:
        app: multi
    spec:
      containers:
      - name: multi
        image: carlosdelgadillo/multi:v2
        ports:
        - containerPort: 8003
