k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-service
  namespace: microservices-ci
spec:
  selector:
    app: multi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8003
  type: LoadBalancer
