k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-ingress
  namespace: microservices-qa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: multi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: multi-service
            port:
              number: 80
